--- a/assets/css/stylea.css
+++ b/assets/css/stylea.css
@@ -1,7 +1,7 @@
 /* Common */
 :root {
-  --playfair-display: "Playfair Display", serif;
-  --plus-jakarta-sans: "Plus Jakarta Sans", sans-serif;
+  --playfair-display: 'Playfair Display', serif;
+  --plus-jakarta-sans: 'Plus Jakarta Sans', sans-serif;
 
   --primary-color: #b1454a;
   --secondary-color: #121212;
@@ -86,7 +86,6 @@ a {
   align-items: center;
 }
 
-
 /* Search */
 .search .input-group input {
   background-color: var(--color-creamson);
@@ -160,11 +159,10 @@ a {
   border-radius: 20px;
 }
 
-.header__logo-img{
+.header__logo-img {
   width: 48px;
   height: 48px;
 }
-
 
 .header__logo a {
   padding-left: 30px;
@@ -222,8 +220,6 @@ a {
   gap: 20px;
 }
 
-
-
 /* START: header media querie */
 @media screen and (max-width: 900px) {
   .header__nav {
@@ -244,20 +240,19 @@ a {
     margin-bottom: 0;
   }
 
-
   .menu-icon {
-    position: relative; 
+    position: relative;
     cursor: pointer;
   }
 
   .header__menu-mobile:hover .mobile-menu {
     display: block;
   }
-  
+
   .mobile-menu {
-    display: none; 
-    position: absolute; 
-    top: 6%; 
+    display: none;
+    position: absolute;
+    top: 6%;
     right: 3%;
     background-color: var(--color-creamson);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -283,7 +278,7 @@ a {
     cursor: pointer;
     border-radius: 5px;
   }
-  
+
   .mobile-menu li {
     width: 100%;
     list-style: none;
@@ -301,13 +296,12 @@ a {
     background-color: #b1454a;
     color: #fff;
   }
-  
-  .mobile-menu li a {
-    display: block; 
-    padding: 10px 20px; 
-    text-decoration: none; 
-  }
 
+  .mobile-menu li a {
+    display: block;
+    padding: 10px 20px;
+    text-decoration: none;
+  }
 }
 
 @media screen and (max-width: 550px) {
@@ -319,9 +313,9 @@ a {
 /* END: header media queries */
 
 .mobile-menu {
-  display: none; 
-  position: absolute; 
-  top: 6%; 
+  display: none;
+  position: absolute;
+  top: 6%;
   right: 3%;
   background-color: var(--color-creamson);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -349,9 +343,10 @@ a {
 } */
 
 /* Banner */
-.banner {}
+.banner {
+}
 
-.banner .carousel-item img{
+.banner .carousel-item img {
   height: 450px;
   border-radius: 40px;
 }
@@ -366,8 +361,6 @@ a {
   border: 0.5px #888888 solid;
   background-color: var(--color-creamson);
 }
-
-
 
 .book-detail_img {
   background-color: var(--color-creamson);
@@ -420,7 +413,7 @@ a {
   padding: 20px;
 }
 
-.book-detail_desc p{
+.book-detail_desc p {
   font-size: large;
   font-weight: 500;
 }
@@ -431,8 +424,6 @@ a {
   width: 100%;
   background-color: var(--color-creamson);
 }
-
-
 
 .book-suggest h2 {
   padding: 20px 40px;
@@ -460,7 +451,8 @@ a {
 }
 
 /* Login page and Register page */
-.form-login, .form-register {
+.form-login,
+.form-register {
   background-color: var(--color-creamson);
 }
 
@@ -480,7 +472,7 @@ a {
   padding: 15px 20px;
 }
 
-.pagination .active span{
+.pagination .active span {
   background-color: var(--primary-color);
   color: #fff;
 }
@@ -493,7 +485,7 @@ a {
 .card {
   border: none;
   border-radius: 15px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .card-header {
@@ -509,11 +501,11 @@ a {
 }
 
 .form-group,
-.button-group{
+.button-group {
   padding: 15px 30px;
 }
 
-.button-group{
+.button-group {
   display: flex;
   justify-content: space-around;
 }
@@ -532,7 +524,7 @@ a {
 .contact-form {
   background-color: var(--color-creamson);
   border-radius: 15px;
-  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
   padding: 40px;
   margin: 40px;
 }
@@ -553,7 +545,6 @@ a {
   border-radius: 10px;
 }
 
-
 /* Product */
 .title_product {
   margin: 40px 0px;
@@ -571,9 +562,9 @@ a {
 }
 
 .product_cards {
-  margin: 0 auto; 
+  margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(254px, 1fr)); 
+  grid-template-columns: repeat(auto-fill, minmax(254px, 1fr));
   gap: 30px;
 }
 
@@ -634,7 +625,6 @@ a {
   margin-bottom: 0px;
 }
 
-
 .footer ul:last-child {
   gap: 32px;
 }
@@ -670,7 +660,6 @@ a {
   padding: 0px;
 }
 
-
 .footer__social li {
   width: 42px;
   height: 42px;
@@ -688,10 +677,9 @@ a {
   background-color: var(--primary-color);
 }
 
-
 /* Responsive */
 
-@media screen and (max-width: 900px){
+@media screen and (max-width: 900px) {
   body {
     margin: 0px;
   }
@@ -709,7 +697,7 @@ a {
     margin-right: 0px;
   }
 
-  .banner .carousel-item img{
+  .banner .carousel-item img {
     height: 300px;
     border-radius: 20px;
   }
@@ -722,11 +710,11 @@ a {
     padding: 15px;
   }
 
-  .filter .filter-title h3{
+  .filter .filter-title h3 {
     font-size: medium;
   }
 
-  .filter .list-group button{
+  .filter .list-group button {
     font-size: large;
   }
 
@@ -740,7 +728,7 @@ a {
     padding: 0%;
   }
 
-  .book-detail_img img{
+  .book-detail_img img {
     padding: 0%;
     width: 245px;
     height: 390px;
@@ -766,13 +754,14 @@ a {
     margin: 50px;
   }
 
-  
   /* Login page and Register page */
-  .form-login__info, .form-register__info {
+  .form-login__info,
+  .form-register__info {
     width: 100%;
   }
 
-  .form-login__img, .form-register__img {
+  .form-login__img,
+  .form-register__img {
     display: none !important;
   }
 
@@ -795,17 +784,15 @@ a {
   }
 
   /* Contact us */
-  .container_contact .col-md-8{
+  .container_contact .col-md-8 {
     width: 83.33333333%;
   }
 
-  
   /* Footer */
   .footer {
     margin: 0px;
     flex-direction: column;
   }
-  
 }
 
 @media screen and (max-width: 550px) {
@@ -814,15 +801,15 @@ a {
   }
 
   /* banner */
-  .banner .carousel-item img{
+  .banner .carousel-item img {
     height: 200px;
     border-radius: 20px;
   }
 
   .mobile-menu {
-    display: none; 
-    position: absolute; 
-    top: 10%; 
+    display: none;
+    position: absolute;
+    top: 10%;
     right: 0%;
     background-color: var(--color-creamson);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -838,18 +825,16 @@ a {
     margin-top: 20px;
   }
 
-
   /* Book detail */
   .book-detail_img {
     padding: 15%;
   }
 
-
   .book-detail_title h2 {
     font-size: larger;
   }
-  
-  .book-detail_desc p{
+
+  .book-detail_desc p {
     font-size: large;
   }
 
@@ -863,7 +848,8 @@ a {
   }
 
   /* Login page and Register page */
-  .login-header__logo, .register-header__logo{
+  .login-header__logo,
+  .register-header__logo {
     padding: 0 !important;
   }
 
@@ -878,11 +864,10 @@ a {
     margin-bottom: 20px;
   }
 
-  .container_contact .col-md-8{
+  .container_contact .col-md-8 {
     width: 100%;
     padding: 0;
   }
-
 
   .footer__nav-item {
     margin: 0px 7px;
